--- a/package.json
+++ b/package.json
@@ -3,40 +3,40 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider ng serve",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider ng build",
-    "serve": "NODE_OPTIONS=--openssl-legacy-provider ng serve",
+    "start": "ng serve",
+    "build": "ng build",
+    "serve": "ng serve",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-  "@angular/animations": "^18.0.0",
-  "@angular/cdk": "^18.0.0",
-  "@angular/common": "^18.0.0",
-  "@angular/compiler": "^18.0.0",
-  "@angular/core": "^18.0.0",
-  "@angular/forms": "^18.0.0",
-  "@angular/material": "^18.0.0",
-  "@angular/platform-browser": "^18.0.0",
-  "@angular/platform-browser-dynamic": "^18.0.0",
-  "@angular/router": "^18.0.0",
+    "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/material": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-  "zone.js": "~0.14.10"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-  "@angular-devkit/build-angular": "^18.2.0",
-  "@angular/cli": "^18.0.0",
-  "@angular/compiler-cli": "^18.0.0",
-  "@types/jasmine": "~4.3.0",
-  "@types/node": "^20.0.0",
-  "jasmine-core": "~4.3.0",
-  "karma": "~6.4.0",
-  "karma-chrome-launcher": "~3.2.0",
-  "karma-coverage": "~2.2.0",
-  "karma-jasmine": "~5.1.0",
-  "karma-jasmine-html-reporter": "~2.1.0",
-  "typescript": "~5.4.0"
+    "@angular-devkit/build-angular": "^18.2.0",
+    "@angular/cli": "^18.0.0",
+    "@angular/compiler-cli": "^18.0.0",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.0.0",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.4.0"
   }
 }
